syntax = "proto3";
option csharp_namespace = "EventSourcing.Contracts";
package ES;

import "Empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";


message TimerResponse {
    TimerRequest CreatedTimer = 1;
    string TimerId = 3;
}

message NotificationRequest {
    google.protobuf.Timestamp NotificationTime = 1;
    google.protobuf.Any Data = 2;
}

message TimerRequest {
    string RoutingKey = 1;
    string Originator = 2;
    int64 IntervalMs = 3;
    google.protobuf.Timestamp TerminateTime = 4;
}

message Tick {
    google.protobuf.Timestamp CurrentTime = 1;
    string RoutingKey = 2;
    string Originator = 3;
    string TimerId = 4;
}


service Timer {
    rpc StartTimer (TimerRequest) returns (TimerResponse) {
    }

    rpc StopTimer (TimerRequest) returns (Empty) {
    }
}